# substrate-node-template

./: Cargo.toml
node/: Cargo.toml
node/src/: service.rs
pallets/assignment/: Cargo.toml  README.md
pallets/assignment/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/ocw-assignment/: Cargo.toml
pallets/ocw-assignment/src/: lib.rs  mock.rs  tests.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
